# simple-games

./: Cargo.toml  README.md  compile_static  out.html
postgres/: start.sh
src/: custom_game.rs  items.rs  main.rs  minesweeper.rs  minesweeper3d.rs  postgres.rs  postgres_wrapper.rs  repeat_sequence.rs
src/minesweeper/: common.rs  minesweeper.rs  minesweeper3d.rs  mod.rs
