[package]
name = "simple-games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.7"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
valence = { git = "https://github.com/valence-rs/valence" }
